# dns

./: .gitignore  README.md  client.py  config.py  pyproject.toml  server.py
dns/: answer.py  header.py  message.py  question.py  record.py  utils.py
