[tool.poetry]
name = "dns"
version = "0.1.0"
description = ""
authors = ["Devansh Singh <devanshamity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
